unpackaged/main/default/objects/Recommendation__c/Recommendation__c.object-meta.xml
<CustomObject>
    <label>Recommendation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Recommendation Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>