unpackaged/main/default/objects/Recommendation__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>